--- a/WebContent/css/administration.css
+++ b/WebContent/css/administration.css
@@ -68,7 +68,7 @@ table#administration-panel td a{
 	transform: scale(1.1, 1.1);
 }
 	
-#manage-content, #manage-user, #manage-review, #manage-code, #manage-content-choice {
+#manage-content, #manage-user, #manage-review, #manage-code, #manage-content-choice, #manage-deletionRequests {
 	width: 900px; 
 	height: 420px;
 	background-color: white;
@@ -80,7 +80,7 @@ table#administration-panel td a{
 	left: 17%; 
 }
 
-#manage-content header, #manage-user header, #manage-review header, #manage-code header, #manage-content-choice header {
+#manage-content header, #manage-user header, #manage-review header, #manage-code header, #manage-content-choice header, #manage-deletionRequests header {
 	font-size: small;
 	background-color: gray;
 	margin-top: 0;
@@ -121,7 +121,7 @@ a.button {
 	text-align: center;
 }
 
-#users-table td , #team-choice-table td{
+#users-table td , #team-choice-table td, #requests-table td{
 	text-align: center;
 }
 
@@ -143,7 +143,7 @@ a.button {
 	font-size: medium;
 }
 
-#manage-content h2, #manage-user h2, #manage-review h2, #manage-code h2, #manage-content-choice h2{
+#manage-content h2, #manage-user h2, #manage-review h2, #manage-code h2, #manage-content-choice h2, #manage-deletionRequests h2{
 	display: inline-block; 
 	text-align: center; 
 	color: white;
@@ -198,7 +198,7 @@ a.button {
 		font-size: large;
 	}
 	
-	#manage-content, #manage-user, #manage-review, #manage-code, #manage-content-choice {
+	#manage-content, #manage-user, #manage-review, #manage-code, #manage-content-choice , #manage-deletionRequests{
 		width: 320px; 
 		height: 300px;
 		left: 4%; 
